--- a/src/mathgame/MathGameGUI.form
+++ b/src/mathgame/MathGameGUI.form
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+  <NonVisualComponents>
+    <Component class="javax.swing.ButtonGroup" name="operationGroup">
+    </Component>
+  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -57,7 +61,7 @@
                               <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
                               <Component id="btnNew" min="-2" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-                              <Component id="jButton2" min="-2" pref="99" max="-2" attributes="0"/>
+                              <Component id="btnCheck" min="-2" pref="99" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace pref="41" max="32767" attributes="0"/>
@@ -90,10 +94,10 @@
               </Group>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="rbtnDiv" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="btnNew" alignment="1" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButton2" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnCheck" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="rbtnDiv" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="rbtnAll" min="-2" max="-2" attributes="0"/>
@@ -116,6 +120,9 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="rbtnAdd">
       <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="operationGroup"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Addition"/>
       </Properties>
       <Events>
@@ -124,21 +131,33 @@
     </Component>
     <Component class="javax.swing.JRadioButton" name="rbtnSub">
       <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="operationGroup"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Subtraction"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="rbtnMulti">
       <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="operationGroup"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Multiplication"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="rbtnDiv">
       <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="operationGroup"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Division"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JRadioButton" name="rbtnAll">
       <Properties>
+        <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
+          <ComponentRef name="operationGroup"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="All"/>
       </Properties>
       <Events>
@@ -181,11 +200,17 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="New Equation"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnNewActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton2">
+    <Component class="javax.swing.JButton" name="btnCheck">
       <Properties>
         <Property name="text" type="java.lang.String" value="Check"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCheckActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
